[package]
name = "http_bandwidth_speed_tester"
version = "0.1.0"
authors = ["richardsondev"]
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.13.0"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = "0.4"
tokio-native-tls = "0.3"
futures-util = "0.3"
