[package]
name = "httpbandwidthspeedtester"
version = "0.1.0"
authors = ["richardsondev"]
edition = "2021"

[dependencies]
hyper = { version = "1.6", features = ["full"] }
hyper-tls = "0.6"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.17.0"
bytes = "1.11"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = "0.4"
tokio-native-tls = "0.3"
futures-util = "0.3"
openssl = { version = "0.10.75", features = ["vendored"] }
